# librespot

./: Cargo.toml
audio/: Cargo.toml
connect/: Cargo.toml
connect/src/: spirc.rs
core/: Cargo.toml
core/src/: session.rs
discovery/: Cargo.toml
playback/: Cargo.toml
