[package]
name = "librespot-audio"
version = "0.3.1"
authors = ["Paul Lietar <paul@lietar.net>"]
description="The audio fetching and processing logic for librespot"
license="MIT"
edition = "2018"

[dependencies.librespot-core]
path = "../core"
version = "0.3.1"

[dependencies]
aes-ctr = "0.6"
byteorder = "1.4"
bytes = "0.5.6"
log = "0.4"
futures-util = { version = "0.3", default_features = false }
tempfile = "3.1"
tokio = { version = "0.2.22", features = ["sync", "macros"] }
