[package]
name = "librespot-connect"
version = "0.3.1"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery and Spotify Connect logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
form_urlencoded = "1.0"
futures-util = { version = "0.3.5", default_features = false }
hyper = { version = "0.13.10" }
log = "0.4"
protobuf = "2.14.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "sync"] }

[dependencies.librespot-core]
path = "../core"
version = "0.3.1"

[dependencies.librespot-playback]
path = "../playback"
version = "0.3.1"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.3.1"

[dependencies.librespot-discovery]
path = "../discovery"
version = "0.3.1"

[features]
with-dns-sd = ["librespot-discovery/with-dns-sd"]
